Fixed app enabling and disabling constantly while holding the toggle button.