@@ -16,6 +16,9 @@ title: Version 1.10 > Minor
 This changelog will contain all changes from 1.10.0 onwards before the next major version.
 !!!
 
+==- Version 1.10.6
+Fixed logger crashing when log.txt is not found for some reason.
+Fixed settings crashing when currentProfile.txt is not found, the file will now be created.
 ==- Version 1.10.5
 Fixed app enabling and disabling constantly while holding the toggle button.
 ==- Version 1.10.4
