@@ -1,1 +1,1 @@
-1.10.5
+1.10.6
