@@ -1,1 +1,2 @@
-Fixed app enabling and disabling constantly while holding the toggle button.
+Fixed logger crashing when log.txt is not found for some reason.
+Fixed settings crashing when currentProfile.txt is not found, the file will now be created.
